Kubernetes/jmaze-k8s-cilium/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
      app.kubernetes.io/name: qbittorrent
      app.kubernetes.io/instance: qbittorrent
      pod.name: main
  template:
    metadata:
      labels:
        app: qbittorrent
        app.kubernetes.io/name: qbittorrent
        app.kubernetes.io/instance: qbittorrent
        pod.name: main
        egress-gateway: "true"
        egress-gateway-policy: "cyberghost-vpn"
    spec:
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      containers:
        - name: vpn-monitor
          image: alpine:latest
          command:
            - /bin/sh
            - -c
            - |
              [...]
          volumeMounts:
            - name: shared-data
              mountPath: /tmp
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.1.0
          imagePullPolicy: Always
          ports:
            - name: webui
              containerPort: 8080
              protocol: TCP
            - name: torrent
              containerPort: 6881
              protocol: TCP
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: shared-data
              mountPath: /tmp
            - name: config
              mountPath: /config
              readOnly: false
            - name: media
              mountPath: /media
              readOnly: false
          command:
            - /bin/sh
            - -c
            - |
              echo "Waiting for VPN check to complete..."
              while [ ! -f /tmp/vpn-check-complete ]; do
                echo "The VPN check is not complete yet. Retrying in 30 seconds..."
                sleep 30
              done
              echo "VPN check complete. Starting qBittorrent..."
              exec /init
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  if [ -f /tmp/vpn-check-complete ]; then
                    exit 0
                  else
                    exit 1
                  fi
            initialDelaySeconds: 90
            periodSeconds: 60
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent
        - name: media
          persistentVolumeClaim:
            claimName: ds1522-media
