Kubernetes/jmaze-k8s-cilium/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: webui
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    pod.name: main
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/instance: qbittorrent
